bug#33329 extraneous ROLLBACK in binlog on connection does not use trans tables

changes for an assert and an updated results file.


mysql-test/r/mix_innodb_myisam_binlog.result:
  results file changed as there is no ROLLBACK query in binlog as it must be.
sql/sql_update.cc:
  refining assert as the initial value of transactional_tables has been
  changed to zero.